--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <script src="ajax.js" charset="utf-8"></script>
   </head>
   <body>
-
+<button id="button">Run AJAX Request to Root</button>
     <section id="step12">
       <h2>Step 1 and 2</h2>
     </section>
 
     <section id="step3456">
+      <button id="button1">Run AJAX Request to PING/PONG!</button>
+
       <h2>Step 3, 4, 5, 6</h2>
     </section>
 
