--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </section>
 
     <section id="step7">
+      <button id="button7">Run AJAX Request Count></button>
+      
       <h2>Step 7</h2>
     </section>
 
