up to 8 complete

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 
     <section id="step7">
       <button id="button7">Run AJAX Request Count></button>
-      
+
       <h2>Step 7</h2>
     </section>
 
     <section id="step8">
+      <button id="button8">"Run AJAX Request to Time"></button>
       <h2>Step 8</h2>
     </section>
 
