--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="step9">
       <button id="button9">"Run AJAX Request to A Car"></button>
-
+      <ul id="bob"></ul>
       <h2>Step 9</h2>
     </section>
 
